@@ -19,7 +19,7 @@ public class Main {
 			try {
 				Socket cs = new Socket("localhost", 1111);
 				OutputStreamWriter writer = new OutputStreamWriter(cs.getOutputStream(), Charset.forName("UTF-8"));
-				writer.write("test: "+String.valueOf(Thread.currentThread().getId())+"\n");
+				writer.write("test: "+String.valueOf(Thread.currentThread().threadId())+"\n");
 				writer.flush();
 				BufferedReader reader = new BufferedReader(
 						new InputStreamReader(cs.getInputStream(), Charset.forName("UTF-8")));
